--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "poultry-farm-app",
   "version": "1.0.0",
@@ -12,18 +11,19 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
+    "debug": "^4.3.7",
     "expo": "^53.0.0",
     "expo-font": "~13.3.1",
     "expo-router": "^3.5.24",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "graphql": "^16.9.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "graphql": "^16.9.0",
-    "debug": "^4.3.7"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
