--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "debug": "^4.3.7",
     "expo": "^53.0.0",
     "expo-font": "~13.3.1",
+    "expo-notifications": "^0.30.4",
     "expo-router": "^3.5.24",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "graphql": "^16.9.0",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1306.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.24.0",
